--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.h2.console.enabled=true
+
+logging.level.com.cepardov=debug
