--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.h2.console.enabled=true
 
+server.port=9090
+
 logging.level.com.cepardov=debug
